website name fix

--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -151,7 +151,9 @@
                                                     <label class="info-label">Website</label>
                                                 </div>
                                                 <div class="col-lg-9 col-md-9">
-                                                    <input type="text" class="form-control" placeholder="website name" ng-model="editData.website"  name="website"/>
+                                                    <div class="website-label">
+                                                        <label>collabro.com/</label><input type="text" class="form-control" placeholder="website name" ng-model="editData.website"  name="website"/>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="row mt-10 flex-center">
