--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -84,7 +84,7 @@
                                                 <label class="info-label">Website</label>
                                             </div>
                                             <div class="col-lg-9 col-md-9">
-                                                <p class="website-name">{{userData.website}}</p>
+                                                <p class="website-name">collabro.com/{{userData.website}}</p>
                                             </div>
                                         </div>
                                         <div class="row mt-20">
