dashboard wording changes done

--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -459,7 +459,7 @@
                 <div class="dashboard-top">
                     <ul class="dashboard-list">
                         <li>
-                            <span>Total Earnings</span>
+                            <span>Revenue</span>
                             <div class="font-price">
                                 ${{user.experiencepoints}}
                             </div>
@@ -501,7 +501,7 @@
                     <div class="chart-wrapper mt-20">
                         <div class="progress-wrapper">
                             <div class="progress-label">
-                                <h6><i class="fa fa-circle success"></i> Experience Points</h6>
+                                <h6><i class="fa fa-circle success"></i> Service Earned</h6>
                                 <span class="secondary-price">${{user.experiencepoints}}</span>
                             </div>
                             <div class="progress">
@@ -511,7 +511,7 @@
                         </div>    
                         <div class="progress-wrapper">
                             <div class="progress-label">
-                                <h6><i class="fa fa-circle warning"></i> Profit Earned</h6>
+                                <h6><i class="fa fa-circle warning"></i> Product Earned</h6>
                                 <span class="secondary-price">$0</span>
                             </div>                    
                             <div class="progress">
