--- a/angular/tpl/blocks/desktop/leftmenu.html
+++ b/angular/tpl/blocks/desktop/leftmenu.html
@@ -1,6 +1,6 @@
 <div class="left-sidebar">
     <div class="sidebar-card">
-        <h6 class="label-xs">My Total Earning</h6>
+        <h6 class="label-xs">Earning Balance</h6>
         <span class="font-price">${{user.experiencepoints}}</span>
     </div>
 
