new changes updated

--- a/angular/tpl/blocks/desktop/rightmenu.html
+++ b/angular/tpl/blocks/desktop/rightmenu.html
@@ -195,8 +195,8 @@
                 </div>
             </div>
 
-            <div class="msg-post" ng-if="stateurl != 'app.chats' && stateurl != 'app.feeds'">
-                <img src="../assets/img/chat-icon.png" alt="message" ng-click="showhideChat();">
+            <div class="msg-post" ng-if="stateurl != 'app.chats' && stateurl != 'app.feeds' && stateurl != 'app.todos' && stateurl != 'app.wishlist' && stateurl != 'app.projectlist' && stateurl != 'app.notification'" ng-click="showhideChat();">
+                <img src="../assets/img/chat-icon.png" alt="message">
             </div>
 
         </div>
