--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -1,12 +1,12 @@
 <div ng-controller="ProjectDetailCtrl" class="content-wrapper">
    <div class="leftSidebar" ng-include="'tpl/blocks/desktop/leftmenu.html'"></div>
    <div class="center-content">
-   		<div class="row">
+   		<div class="row" id="content-area">
             <div class="col-lg-12 col-md-12">
                 <div class="topbar">
                     <div class="topbar-left">
                         <ul class="topbar-list">
-                            <li>{{projectData.title}}</li>
+                            <li>Project Requests</li>
                             <li>{{projectData.members.length + ' Project Members'}}</li>
                             <!-- <li>Active Projects</li>
                             <li>5 Projects </li> -->
@@ -70,7 +70,7 @@
                             <span class="price-sub">&nbsp;</span>
                         </div>
                         <div class="feed-footer-right">
-                            <a title="Share to Earn" ng-click="sharefeedtosocial(projectData)"><i class="fa fa-share"></i></a>
+                            <a title="Share to Earn" ng-click="shareprojecttosocial(projectData)"><i class="fa fa-share"></i></a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
         </div>
 
         <div class="wd-100 mt-15" ng-if="projectData.showchat">
-            <div class="row">
+            <div class="row" id="chat-area">
                 <div class="col-lg-12 col-md-12">
                     <div class="chat-wrap">
                         <div class="message-head">
