--- a/angular/tpl/blocks/modals/collaborateModal.html
+++ b/angular/tpl/blocks/modals/collaborateModal.html
@@ -137,7 +137,7 @@
                             <div class="form-column">
                                 <div class="form-group">
                                     <label class="control-label left">Deadline</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                         <input type="text" class="form-control input-with-icon" placeholder="Deadline" ng-model='formData.projectdeadline' ng-disabled="!formData.type" name="deadline" required />
                                         <span class="input-icon">
                                             <i class="fa fa-lg fa-calendar"></i>
