--- a/angular/tpl/blocks/modals/newevent.html
+++ b/angular/tpl/blocks/modals/newevent.html
@@ -264,7 +264,7 @@
                             <div class="form-column flex-top-space">
                                 <div class="form-group">
                                     <label class="control-label">Start date</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                         <div class="input-group">
                                             <span class="input-group-addon">
                                                 <i class="fa fa-lg fa-calendar"></i>
@@ -283,7 +283,7 @@
                             <div class="form-column flex-top-space ml-30">
                                 <div class="form-group">
                                     <label class="control-label">End date</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                         <div class="input-group">
                                             <span class="input-group-addon">
                                                 <i class="fa fa-lg fa-calendar"></i>
