--- a/angular/tpl/blocks/modals/productModal.html
+++ b/angular/tpl/blocks/modals/productModal.html
@@ -248,7 +248,7 @@
                             <div class="form-column flex-top-space">
                                 <div class="form-group">
                                     <label class="control-label">Start date</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                             <input type="text" class="form-control input-with-icon" ng-model="formData.productstartdate" placeholder="Start Date" name="startdate" ng-required="!formData.hasstartdate" />
                                             <span class="input-icon">
                                             <i class="fa fa-lg fa-calendar"></i>
@@ -265,7 +265,7 @@
                             <div class="form-column flex-top-space ml-30">
                                 <div class="form-group">
                                     <label class="control-label">End date</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                             <input type="text" class="form-control input-with-icon" ng-model="formData.productenddate" placeholder="End Date" name="enddate" ng-required="!formData.hasenddate" required />
                                             <span class="input-icon">
                                             <i class="fa fa-lg fa-calendar"></i>
