--- a/angular/tpl/blocks/modals/requestModal.html
+++ b/angular/tpl/blocks/modals/requestModal.html
@@ -143,7 +143,7 @@
                             <div class="form-column flex-top-space">
                                 <div class="form-group wd-100">
                                     <label class="control-label">Deadline</label>
-                                    <datepicker date-format="yyyy-MM-dd" selector="form-control">
+                                    <datepicker date-format="dd/MM/yyyy" selector="form-control">
                                         <input type="text" class="form-control input-with-icon" placeholder="Deadline" name="deadline" required readonly ng-model='formData.requestdeadline' ng-disabled="!formData.request_type" />
                                         <span class="input-icon">
                                             <i class="fa fa-lg fa-calendar"></i>
