--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -27,7 +27,7 @@
             <div class="content-detail-left">
                 <div class="slider-wrapper">
                     <div class="custom-slider">
-                        <slick data="projectData.files" infinite="false" init-onload="true" settings="productslick" ng-if="!formLoading" class="slider-for">
+                        <slick data="projectData.files" infinite="false" init-onload="true" settings="productslick" class="slider-for">
                             <div class="width100 sliderframer" ng-repeat="(key,image) in projectData.files">
                                 <div class="imgcontainer" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.file}}">
                                     <span ng-if="image.filetype == 2">
@@ -38,7 +38,7 @@
                             </div>
                         </slick>
                         <div class="thumbslider">
-                            <slick data="projectData.images" infinite="false" init-onload="true" settings="productthumbslick" ng-if="!formLoading" class="slider-nav">
+                            <slick data="projectData.images" infinite="false" init-onload="true" settings="productthumbslick" class="slider-nav">
                                 <div class="thumbholder" ng-repeat="(key,image) in projectData.files">
                                     <div class="slidee" background-image="{{image.filetype == 1 ? IMGURL : ''}}{{image.thumbnail}}"></div>
                                 </div>
